--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development HTTP_ENV=test vue-cli-service serve",
-    "build": "cross-env NODE_ENV=production HTTP_ENV=test vue-cli-service build",
+    "pre": "cross-env NODE_ENV=development HTTP_ENV=pre vue-cli-service serve",
+    "prod": "cross-env NODE_ENV=development HTTP_ENV=prod vue-cli-service serve",
+    "build-test": "cross-env NODE_ENV=production HTTP_ENV=test vue-cli-service build",
+    "build-pre": "cross-env NODE_ENV=production HTTP_ENV=pre vue-cli-service build",
+    "build": "cross-env NODE_ENV=production HTTP_ENV=prod vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "inspect": "cross-env NODE_ENV=development HTTP_ENV=test vue-cli-service inspect > webpack.inspect.js",
@@ -16,11 +20,13 @@
     }
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "qiankun": "^2.0.25",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -47,7 +53,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "mini-css-extract-plugin": "^0.11.1",
     "node-sass": "^4.12.0",
+    "postcss-px2rem": "^0.3.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-merge": "^5.1.4"
   }
 }
