--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "qiankun": "^2.0.19",
