--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "crypto-js": "3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
