--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "animate.css": "^4.1.1",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "crypto-js": "3.1.2",
     "lodash": "^4.17.20",
     "qiankun": "^2.0.19",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "crypto-js": "3.1.2"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -58,6 +58,7 @@
     "postcss-px2rem": "^0.3.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-merge": "^5.1.4"
   }
 }
