--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "crypto-js": "3.1.2",
+    "custom-event-polyfill": "^1.0.7",
     "lodash": "^4.17.20",
     "qiankun": "^2.0.19",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "whatwg-fetch": "^3.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
