--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "dependencies": {
+    "@thomasyzt/lvui": "^1.3.0",
     "animate.css": "^4.1.1",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
